# ACM

./: 1.find_prime.cpp  2.prime_divide.cpp  3.Linear_sieve.cpp  3.sieve_of_Eratosthenes.cpp  CMakeLists.txt  Discretization.cpp  ReverseOrderPair.cpp  Sum_of_submatrixes.cpp  banzi.md  binary_search.cpp  difference.cpp  foodchain.cpp  helloworld.cpp  hellp.cpp  merge_sort.cpp  number_of_points.cpp  prefix.cpp  search.cpp  sqr.cpp
1.basic_algorithm/: Discretization.cpp  Interval_merging.cpp  Longest_subsequence.cpp  binary_search.cpp  difference.cpp
2.data_structure/: CMakeLists.txt  Doubly_LInkd_List.cpp  Expression.cpp  Max_XOR_pair.cpp  Monotonic_stack.cpp  Simulate_queen.cpp  Simulate_stack.cpp  Singly_Linked_List.cpp  __KMP__.cpp  foodchain.cpp  hashmap.cpp  heap.cpp  number_of_points.cpp  set.cpp  sliding_window.cpp  stringhash.cpp  trie_tree.cpp
3.graph/: 1.permutation.cpp  14.Prim.cpp  15.Kruskal.cpp  16.Staining_method.cpp  17.hugarian.cpp  3.maze.cpp  6.bfs_in_gragh.cpp  7.topsort.cpp  8.Dijkstra.cpp  9.Dijstra_heap.cpp  the _heart_of_tree.cpp
4.math/: 10.qmi.cpp  11.Inverse_element.cpp  12.exgcd.cpp  13.Linear_congruence_equation.cpp  23.NimGame.cpp  24.Steps_NimGame.cpp  25.Set_NimGame.cpp  4.divisor.cpp  5.the_num_of_dividor.cpp  6.the_sum_of_dividor.cpp  7.gcd.cpp  8.eular_function.cpp  9.Sieve_method_for_finding_Euler_function.cpp
5.DPProblem/: 1.01BagBetter.cpp  2.CompleteBag.cpp  2.CompleteBagFINlAL.cpp  2.CompleteBagPLUS.cpp  3.MultipleBag.cpp  3.MultipleBagPLUS.cpp  4.GroupBag.cpp  5.NumberTriangle.cpp  6.LongestAscendingSubsequence.cpp  (+2 more)
(+32 files in other folders)
